# gsynox

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
annots/: uniprot_biomart.tsv
docs/: getting_started_with_gsynox.ipynb  getting_started_with_gsynox.md  getting_started_with_gsynox.py  toy_db.tsv
src/gsynox/: __init__.py  builder.py  core.py
